# evalsuite

./: .gitignore  LICENSE  README.md  datacleaning.py  metrics.py  plotting.py  pricing.py  pyproject.toml  requirements.txt
evalsuite/: metrics.py  plotting.py  pricing.py  telemetry_downloading.py  utils.py
tests/: test_basic.py
