[project]
name = "evalsuite"
version = "0.1.0"
description = "Modular evaluation toolkit for data analysis"
authors = [
    { name = "Majid Khoshrou" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas",
    "numpy",
    "plotly",
    "seaborn",
    "matplotlib"
]

[tool.poetry]
packages = [
    { include = "evalsuite" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
