[project]
name = "evalsuite"
version = "0.1.5"
description = "Modular evaluation toolkit for data analysis"
authors = [{ name = "Majid Khoshrou" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas",
  "numpy",
  "plotly",
  "seaborn",
  "matplotlib"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["evalsuite"]

[tool.uv]
dev-dependencies = [
  "pytest",
  "mypy",
  "ruff",
  "black"
]
